# log_collector

./: CMakeLists.txt  README.md  README_TUTORIAL.md
conf/: log-collector.conf.example
docs/superpowers/plans/: 2026-06-18-log-collector-plan.md  2026-06-18-log-collector-tutorial-plan.md
docs/superpowers/specs/: 2026-06-18-log-collector-design.md  2026-06-18-log-collector-tutorial-design.md
docs/tutorial/: 01-project-setup.md  02-daemon-and-signals.md  03-epoll-network.md  04-shm-ringbuffer.md  05-process-pool.md  06-testing-and-debugging.md
include/: common.h
src/: config.c  config.h  daemon.c  daemon.h  file_writer.c  file_writer.h  log_parser.c  log_parser.h  main.c  master.c  master.h  shm_buffer.c  shm_buffer.h  signal_handler.c  signal_handler.h  worker.c  worker.h
systemd/: log-collector.service
tests/: CMakeLists.txt  e2e_test.sh  test_config.c  test_daemon.c  test_file_writer.c  test_log_parser.c  test_shm_buffer.c  test_signal_handler.c
